carina-tui/src/snapshots/carina_tui__module_info_tui_snapshot_tests__snapshot_module_info_selected_argument.snap
---
source: carina-tui/src/module_info_tui_snapshot_tests.rs
expression: output
---
┌ Module Info: web_tier ───────────────────────────────────────────────────────────────────────────┐
│=== ARGUMENTS ===  (2 items)                                                                      │
│  vpc: aws.vpc  (required)                                                                        │
│  enable_https: Bool = true                                                                       │
│=== CREATES ===  (2 resources)                                                                    │
│  web_sg: aws.security_group                                                                      │
│  http_rule: aws.security_group.ingress_rule                                                      │
│=== ATTRIBUTES ===  (1 items)                                                                     │
│  security_group: aws.security_group                                                              │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────┐
│vpc                                                                                               │
│Type: aws.vpc                                                                                     │
│required                                                                                          │
│The VPC to deploy into                                                                            │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 q quit  ↑↓/jk navigate  Tab switch panel
