carina-tui/src/snapshots/carina_tui__module_info_tui_snapshot_tests__snapshot_root_config_info.snap
---
source: carina-tui/src/module_info_tui_snapshot_tests.rs
expression: output
---
┌ File Info: main ─────────────────────────────────────────────────────────────────────────────────┐
│=== IMPORTS ===  (0 items)                                                                        │
│=== CREATES ===  (2 resources, 0 module calls)                                                    │
│  main_vpc: aws.vpc                                                                               │
│  subnet: aws.subnet                                                                              │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────┐
│IMPORTS                                                                                           │
│0 items                                                                                           │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 q quit  ↑↓/jk navigate  Tab switch panel
